<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/about"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="all|web"
        android:clickable="true"
        android:ellipsize="none"
        android:focusable="true"
        android:fontFamily="sans-serif-medium"
        android:foreground="@mipmap/ic_launcher"
        android:foregroundGravity="bottom|center_horizontal"
        android:gravity="center_horizontal"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/fab_margin"
        android:paddingBottom="@android:dimen/app_icon_size"
        android:text="@string/HomeWebSite"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="casual"
        android:foregroundGravity="bottom"
        android:paddingTop="@dimen/fab_margin"
        android:text="@string/Info"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp" />

</LinearLayout>